# cpu-effects-bench

./: .gitmodules  CMakeLists.txt  README.md
noopt/: CMakeLists.txt  superscalar.cpp
opt/: CMakeLists.txt  branches.cpp  cache.cpp
